plugins {
    id 'application'
    id 'io.freefair.lombok' version '6.2.0'
    id 'org.springframework.boot' version '2.5.4'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
}

group = 'net.pumbas'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '16'

repositories {
    mavenCentral()
    google()
}

configurations {
    developmentOnly
    runtimeClasspath {
        extendsFrom developmentOnly
    }
}

dependencies {
    implementation 'com.google.api-client:google-api-client:1.33.2'
    implementation 'com.google.apis:google-api-services-calendar:v3-rev20220203-1.32.1'
    implementation 'com.google.auth:google-auth-library-oauth2-http:1.5.3'
    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.33.1'
    implementation 'javax.inject:javax.inject:1'

    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
    useJUnitPlatform()
}